# kvstore

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deployment.yaml  kvstore-k8s-deploy.yaml  run.sh  run_locally.sh  service.yaml  start_node.sh
proto/: omnipaxos.proto
src/: error.rs  main.rs  server.rs
src/cluster/: membership.rs  mod.rs  peer_discovery.rs
src/grpc/: client.rs  connection.rs  mod.rs  parse_utils.rs  server.rs
src/kvstore/: kv.rs  mod.rs  server.rs  util.rs
src/rest/: server.rs
src/rpc/: client.rs  parse_utils.rs  server.rs
