[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }

async-mutex = "1.4.0"
async-notify = "0.2.0"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.68"

crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"

derivative = "2.2.0"

femme = "2.2.1"

slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"

omnipaxos = { version = "0.1.0", features = ["macros"] }
omnipaxos_storage = { version = "0.1.0" }

tonic = "0.8"
prost = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"

tide = "0.16.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.8"

[features]
derive_entry = []
